Fix HTML markup in tests

--- a/test/dev/player.html
+++ b/test/dev/player.html
@@ -6,7 +6,7 @@
 
 <title>Figuration Widget: Player</title>
 
-<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
+<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css">
 <link rel="stylesheet" href="../../site/assets/4.0/fonts/fontawesome/css/all.min.css">
 
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
@@ -408,12 +408,12 @@ body {
     </div>
 
     <audio controls>
-        <source src="../../site/assets/4.0/audio/Drumroll-Heigh-hoo.mp3" type="audio/mpeg" />
+        <source src="../../site/assets/4.0/audio/Drumroll-Heigh-hoo.mp3" type="audio/mpeg">
         <p>HTML5 audio not supported</p>
     </audio>
 </div>
 
-<hr />
+<hr>
 
 <h2 class="h4">Ambient Acoustic by StrangerEight</h2>
 <div data-cfw="player" role="region" aria-label="audio player">
@@ -442,12 +442,12 @@ body {
     </div>
 
     <audio controls>
-        <source src="../../site/assets/4.0/audio/Ambient_Acoustic-StrangerEight.mp3" type="audio/mpeg" />
+        <source src="../../site/assets/4.0/audio/Ambient_Acoustic-StrangerEight.mp3" type="audio/mpeg">
         <p>HTML5 audio not supported</p>
     </audio>
 </div>
 
-<hr />
+<hr>
 
 <h2 class="h4">Drumroll by Heigh-hoo</h2>
 <div data-cfw="player" role="region" aria-label="audio player">
@@ -475,19 +475,19 @@ body {
     </div>
 
     <audio controls preload="none">
-        <source src="../../site/assets/4.0/audio/Drumroll-Heigh-hoo.mp3" type="audio/mpeg" />
+        <source src="../../site/assets/4.0/audio/Drumroll-Heigh-hoo.mp3" type="audio/mpeg">
         <p>HTML5 audio not supported</p>
     </audio>
 </div>
 
-<hr />
+<hr>
 
 <h2 class="h4">Niagara Falls</h2>
 <div data-cfw="player" class="video-wrapper" role="region" aria-label="video player">
     <div class="embed-fluid">
         <video poster="../../site/assets/4.0/video/niagara_falls.jpg" controls>
-            <source src="../../site/assets/4.0/video/niagara_falls.mp4" type="video/mp4" />
-            <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
+            <source src="../../site/assets/4.0/video/niagara_falls.mp4" type="video/mp4">
+            <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default>
             <p>HTML5 video not supported</p>
         </video>
     </div>
@@ -532,15 +532,16 @@ body {
         </div>
     </div>
 </div>
-<hr />
+
+<hr>
 
 <h2 class="h4">Niagara Falls</h2>
 <div data-cfw="player" class="video-wrapper" role="region" aria-label="video player">
     <div class="embed-fluid">
         <video poster="../../site/assets/4.0/video/niagara_falls.jpg" controls preload="none">
             <source src="../../site/assets/4.0/video/niagara_falls.mp4">
-            <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en" />
-            <track src="../../site/assets/4.0/video/niagara_falls-es.vtt" label="Espa&ntilde;ol" kind="subtitles" srclang="es" />
+            <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en">
+            <track src="../../site/assets/4.0/video/niagara_falls-es.vtt" label="Espa&ntilde;ol" kind="subtitles" srclang="es">
         </video>
     </div>
     <div class="player-wrapper">
@@ -576,7 +577,7 @@ body {
     </div>
 </div>
 
-<hr />
+<hr>
 
 <h2 class="h4">Transcript testing</h2>
 <div class="video-transcript">
@@ -584,8 +585,8 @@ body {
         <div class="embed-fluid">
             <video poster="../../site/assets/4.0/video/niagara_falls.jpg" controls preload="none">
                 <source src="../../site/assets/4.0/video/niagara_falls.mp4">
-                <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en" />
-                <track src="../../site/assets/4.0/video/niagara_falls-es.vtt" label="Espa&ntilde;ol" kind="subtitles" srclang="es" />
+                <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en">
+                <track src="../../site/assets/4.0/video/niagara_falls-es.vtt" label="Espa&ntilde;ol" kind="subtitles" srclang="es">
             </video>
         </div>
         <div class="player-wrapper">
@@ -622,13 +623,15 @@ body {
     </div>
 </div>
 
+<hr>
+
 <h2 class="h4">Transcript as toggle</h2>
 <div class="video-transcript">
     <div data-cfw="player" class="video-wrapper" role="region" aria-label="video player" data-cfw-player-transcript-option="false" data-cfw-player-transcript=0>
         <div class="embed-fluid">
             <video poster="../../site/assets/4.0/video/niagara_falls.jpg" controls>
-                <source src="../../site/assets/4.0/video/niagara_falls.mp4" type="video/mp4" />
-                <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
+                <source src="../../site/assets/4.0/video/niagara_falls.mp4" type="video/mp4">
+                <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default>
                 <p>HTML5 video not supported</p>
             </video>
         </div>
@@ -665,16 +668,15 @@ body {
     </div>
 </div>
 
-<hr />
-<hr />
+<hr>
 
-<h2 class="h4">Niagara Falls</h2>
+<h2 class="h4">Transcript with options</h2>
 <div class="video-transcript">
     <div data-cfw="player" class="video-wrapper" role="region" aria-label="video player">
         <div class="embed-fluid">
             <video poster="../../site/assets/4.0/video/niagara_falls.jpg" controls>
                 <source src="../../site/assets/4.0/video/niagara_falls.mp4">
-                <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en" />
+                <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en">
             </video>
         </div>
         <div class="player-wrapper">
@@ -711,7 +713,7 @@ body {
     </div>
 </div>
 
-<hr />
+<hr>
 
 <h2 class="h4">Transcript + Caption testing</h2>
 <div class="video-transcript">
@@ -719,8 +721,8 @@ body {
         <div class="embed-fluid">
             <video poster="../../site/assets/4.0/video/niagara_falls.jpg" controls preload="none">
                 <source src="../../site/assets/4.0/video/niagara_falls.mp4">
-                <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en" default />
-                <track src="../../site/assets/4.0/video/niagara_falls-es.vtt" label="Espa&ntilde;ol" kind="subtitles" srclang="es" />
+                <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en" default>
+                <track src="../../site/assets/4.0/video/niagara_falls-es.vtt" label="Espa&ntilde;ol" kind="subtitles" srclang="es">
             </video>
         </div>
         <div class="player-wrapper">
@@ -758,7 +760,7 @@ body {
     </div>
 </div>
 
-<hr />
+<hr>
 
 <h2 class="h4">Description testing</h2>
 <div class="video-transcript">
@@ -769,10 +771,10 @@ body {
             <video poster="../../site/assets/4.0/video/niagara_falls.jpg" controls preload="none">
             <!-- <video poster="../../site/assets/4.0/video/niagara_falls.jpg" controls> -->
                 <source src="../../site/assets/4.0/video/niagara_falls.mp4" data-src-describe="../../site/assets/4.0/video/niagara_falls-describe-en.mp4">
-                <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en" />
-                <track src="../../site/assets/4.0/video/niagara_falls-es.vtt" label="Espa&ntilde;ol" kind="subtitles" srclang="es" />
-                <track src="../../site/assets/4.0/video/niagara_falls-describe-en.vtt" label="English Description" kind="descriptions" srclang="en" />
-                <track src="../../site/assets/4.0/video/niagara_falls-describe-es.vtt" label="Descripción Espa&ntilde;ola" kind="descriptions" srclang="es" />
+                <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en">
+                <track src="../../site/assets/4.0/video/niagara_falls-es.vtt" label="Espa&ntilde;ol" kind="subtitles" srclang="es">
+                <track src="../../site/assets/4.0/video/niagara_falls-describe-en.vtt" label="English Description" kind="descriptions" srclang="en">
+                <track src="../../site/assets/4.0/video/niagara_falls-describe-es.vtt" label="Descripción Espa&ntilde;ola" kind="descriptions" srclang="es">
             </video>
         </div>
         <div class="player-wrapper">
@@ -812,7 +814,7 @@ body {
     </div>
 </div>
 
-<hr />
+<hr>
 
 <h2 class="h4">Custom Caption Wrapper</h2>
 <div class="video-transcript">
@@ -820,7 +822,7 @@ body {
         <div class="embed-fluid">
             <video poster="../../site/assets/4.0/video/niagara_falls.jpg" controls>
                 <source src="../../site/assets/4.0/video/niagara_falls.mp4">
-                <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en" />
+                <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en">
             </video>
             <div class="player-caption-display" data-cfw-player="caption-display"></div>
         </div>
@@ -863,8 +865,8 @@ body {
     <div class="embed-fluid">
         <video poster="../../site/assets/4.0/video/niagara_falls.jpg" controls>
             <source src="../../site/assets/4.0/video/niagara_falls.mp4">
-            <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en" />
-            <track src="../../site/assets/4.0/video/niagara_falls-es.vtt" label="Espa&ntilde;ol" kind="subtitles" srclang="es" />
+            <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en">
+            <track src="../../site/assets/4.0/video/niagara_falls-es.vtt" label="Espa&ntilde;ol" kind="subtitles" srclang="es">
         </video>
     </div>
     <div class="player-wrapper">
@@ -901,7 +903,7 @@ body {
 
 <!--
 <pre id="output" style="margin-top: 2em;"></pre>
-<input type="button" onclick="javascript:clearLog();" value="Clear"/>
+<input type="button" onclick="javascript:clearLog();" value="Clear">
 -->
 
 <script type="text/javascript">
