--- a/test/visual/button-group.html
+++ b/test/visual/button-group.html
@@ -6,7 +6,7 @@
 
 <title>Figuration - Button Group</title>
 
-<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
+<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css">
 <link rel="stylesheet" href="../../site/assets/4.0/fonts/fontawesome/css/all.min.css">
 
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
@@ -108,7 +108,7 @@
         </div>
     </div>
 
-    <hr />
+    <hr>
 
     <div class="btn-group-vertical mb-1">
         <div class="btn-check">
@@ -164,25 +164,25 @@
         <button type="button" class="btn">Middle</button>
         <button type="button" class="btn">Right</button>
     </div>
-    <br />
+    <br>
     <div class="btn-group btn-group-large mb-0_5" role="group" aria-label="Large button group">
         <button type="button" class="btn">Left</button>
         <button type="button" class="btn">Middle</button>
         <button type="button" class="btn">Right</button>
     </div>
-    <br />
+    <br>
     <div class="btn-group mb-0_5" role="group" aria-label="Standard button group">
         <button type="button" class="btn">Left</button>
         <button type="button" class="btn">Middle</button>
         <button type="button" class="btn">Right</button>
     </div>
-    <br />
+    <br>
     <div class="btn-group btn-group-small mb-0_5" role="group" aria-label="Small button group">
         <button type="button" class="btn">Left</button>
         <button type="button" class="btn">Middle</button>
         <button type="button" class="btn">Right</button>
     </div>
-    <br />
+    <br>
     <div class="btn-group btn-group-xsmall mb-0_5" role="group" aria-label="Extra small button group">
         <button type="button" class="btn">Left</button>
         <button type="button" class="btn">Middle</button>
@@ -194,22 +194,22 @@
         <button type="button" class="btn">Action</button>
         <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
     </div>
-    <br />
+    <br>
     <div class="btn-group btn-group-large mb-0_5" role="group" aria-label="Large button group">
         <button type="button" class="btn">Action</button>
         <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
     </div>
-    <br />
+    <br>
     <div class="btn-group mb-0_5" role="group" aria-label="Standard button group">
         <button type="button" class="btn">Action</button>
         <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
     </div>
-    <br />
+    <br>
     <div class="btn-group btn-group-small mb-0_5" role="group" aria-label="Small button group">
         <button type="button" class="btn">Action</button>
         <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
     </div>
-    <br />
+    <br>
     <div class="btn-group btn-group-xsmall mb-0_5" role="group" aria-label="Extra small button group">
         <button type="button" class="btn">Action</button>
         <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
@@ -224,7 +224,7 @@
         </div>
         <button type="button" class="btn">Action</button>
     </div>
-    <br />
+    <br>
     <div class="btn-group-vertical mb-1" role="group" aria-label="Vertical button group">
         <button type="button" class="btn">Button</button>
         <button type="button" class="btn">Button much wider</button>
