--- a/test/visual/button.html
+++ b/test/visual/button.html
@@ -6,7 +6,7 @@
 
 <title>Figuration - Button</title>
 
-<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
+<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css">
 <link rel="stylesheet" href="../../site/assets/4.0/fonts/fontawesome/css/all.min.css">
 
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
@@ -98,7 +98,7 @@
     <button type="button" class="btn btn-outline-dark" disabled>Dark</button>
 </p>
 
-Anchor variants:<br />
+<strong>Anchor variants:</strong>
 <p>
     <a href="#" role="button" class="btn disabled" tabindex="-1" aria-disabled="true">Default</a>
     <a href="#" role="button" class="btn btn-primary disabled" tabindex="-1" aria-disabled="true">Primary</a>
@@ -308,7 +308,7 @@ Anchor variants:<br />
   </div>
   <div class="btn-check">
     <input id="fieldset1" type="radio" name="fieldset1" class="btn-check-input">
-    <label for="fieldset1-0" class="btn">Disabled Radio</label>
+    <label for="fieldset1" class="btn">Disabled Radio</label>
   </div>
 </fieldset>
 
