--- a/test/visual/card.html
+++ b/test/visual/card.html
@@ -6,7 +6,7 @@
 
 <title>Figuration - Card</title>
 
-<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
+<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css">
 
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
@@ -170,7 +170,7 @@ Holder.addTheme("gray", {
         </div>
     </div>
 
-    <hr />
+    <hr>
 
     <div class="row row-segements">
         <div class="col-3">.col-3</div>
@@ -202,7 +202,7 @@ Holder.addTheme("gray", {
         </div>
     </div>
 
-    <hr />
+    <hr>
 
     <h2>Group</h2>
 
@@ -286,7 +286,7 @@ Holder.addTheme("gray", {
       </div>
     </div>
 
-    <hr />
+    <hr>
 
     <h2>Footer Alignment - Flexbox Only</h2>
 
@@ -359,7 +359,7 @@ Holder.addTheme("gray", {
       </div>
     </div>
 
-    <hr />
+    <hr>
 
     <h2>Altering Deck Column Count</h2>
 
