--- a/test/visual/form-inline.html
+++ b/test/visual/form-inline.html
@@ -6,7 +6,7 @@
 
 <title>Figuration - Form: Inline</title>
 
-<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
+<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css">
 
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
