--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -6,7 +6,7 @@
 
 <title>Figuration - Form</title>
 
-<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
+<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css">
 
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
@@ -89,7 +89,7 @@
         <legend>Checkbox</legend>
         <div class="form-check">
             <input id="check1" type="checkbox" class="form-check-input">
-            <label for="check"1" class="form-check-label"> Check me out</label>
+            <label for="check1" class="form-check-label"> Check me out</label>
         </div>
     </fieldset>
     <div class="form-group">
@@ -329,7 +329,7 @@
   </fieldset>
 </form>
 
-<hr />
+<hr>
 
 <h2>Select Sizing:</h2>
 <div class="mb-1">
@@ -350,7 +350,7 @@
     </select>
 </div>
 
-<hr />
+<hr>
 
 <h2>Select Sizing w/ validation icons:</h2>
 <form class="needs-validation" novalidate>
@@ -411,7 +411,7 @@
     </div>
 </form>
 
-<hr />
+<hr>
 
 <h2>Static and Label Sizing:</h2>
 <div class="form-group row">
@@ -445,12 +445,12 @@
     </div>
 </div>
 
-<hr />
+<hr>
 
 <h2>Misc Sizing</h2>
 <div class="row mb-1">
     <div class="col">
-        <input type="text" class="form-control" aria-label="Name" value="Some Name" />
+        <input type="text" class="form-control" aria-label="Name" value="Some Name">
     </div>
     <div class="col">
         <div class="input-group"><div class="input-group-text" id="msize0-addon">@</div><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="msize0-addon"><button class="btn" type="button">Button</button></div>
@@ -466,11 +466,11 @@
         </select>
     </div>
     <div class="col">
-        <input type="date" class="form-control" aria-label="Name" />
+        <input type="date" class="form-control" aria-label="Name">
     </div>
 </div>
 
-<hr />
+<hr>
 
 <h2>Static and Label Sizing:</h2>
 
