--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -6,7 +6,7 @@
 
 <title>Figuration - Input Group</title>
 
-<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
+<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css">
 <link rel="stylesheet" href="../../site/assets/4.0/fonts/fontawesome/css/all.min.css">
 
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
@@ -30,15 +30,14 @@
   <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
   <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon3">
   <div class="input-group-text" id="basic-addon3">@example.com</div>
 </div>
 
-
-<hr />
+<hr>
 
 <label for="basic-url0">Your vanity URL</label>
 <div class="input-group">
@@ -46,8 +45,7 @@
   <input type="text" class="form-control" id="basic-url0" aria-describedby="basic-addon5">
 </div>
 
-
-<hr />
+<hr>
 
 <div class="form-group">
   <div class="input-group">
@@ -62,7 +60,7 @@
   </div>
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
   <div class="input-group-text">$</div>
@@ -70,7 +68,7 @@
   <div class="input-group-text">.00</div>
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
   <div class="input-group-text">$</div>
@@ -78,7 +76,7 @@
   <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
   <div class="input-group-text">
@@ -87,7 +85,7 @@
   <input type="text" class="form-control" aria-label="Text input with checkbox">
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
   <div class="input-group-text">
@@ -96,7 +94,7 @@
   <input type="text" class="form-control" aria-label="Text input with radio button">
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
   <div class="input-group-text">
@@ -106,7 +104,7 @@
   <input type="text" class="form-control" aria-label="Text input with checkbox">
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
   <div class="input-group-text">$</div>
@@ -114,14 +112,14 @@
   <input type="text" class="form-control" aria-label="Text input with radio button">
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
   <button class="btn" type="button">Go!</button>
   <input type="text" class="form-control" placeholder="Search for..." aria-label="Search for...">
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
   <button class="btn" type="button">Go!</button>
@@ -133,7 +131,7 @@
   </select>
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
   <button class="btn" type="button">Go!</button>
@@ -145,14 +143,14 @@
   </select>
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
   <input type="text" class="form-control" placeholder="Search for..." aria-label="Search for...">
   <button class="btn" type="button">Go!</button>
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
   <select class="form-control" aria-label="Select one">
@@ -164,7 +162,7 @@
   <button class="btn" type="button">Go!</button>
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
   <select class="form-control" aria-label="Select one">
@@ -176,7 +174,7 @@
   <button class="btn" type="button">Go!</button>
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
   <button class="btn" type="button">Hate it</button>
@@ -184,14 +182,14 @@
   <button class="btn" type="button">Love it</button>
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
     <div class="input-group-text">%</div>
     <textarea class="form-control" rows="5"></textarea>
 </div>
 
-<hr />
+<hr>
 
 <div class="input-group">
     <textarea class="form-control" rows="5"></textarea>
@@ -216,7 +214,7 @@
   <div style="width:100px;height:100px;background-color:red;"></div>
 </div>
 
-<hr />
+<hr>
 
 <div class="d-flex">
   <div class="input-group">
@@ -231,7 +229,7 @@
   <div style="width:100px;height:100px;background-color:red;"></div>
 </div>
 
-<hr />
+<hr>
 
 <div class="d-flex">
   <div class="input-group">
@@ -246,7 +244,7 @@
   <div style="width:100px;height:100px;background-color:red;"></div>
 </div>
 
-<hr />
+<hr>
 
 <h2>Input group sizes</h2>
 
