--- a/test/visual/media-object.html
+++ b/test/visual/media-object.html
@@ -6,7 +6,7 @@
 
 <title>Figuration - Media Object</title>
 
-<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
+<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css">
 
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
@@ -37,7 +37,7 @@ Holder.addTheme("gray", {
 
     <div class="media">
         <a href="#" class="d-flex me-1">
-            <img data-src="holder.js/64x64" alt="Placeholder image" />
+            <img data-src="holder.js/64x64" alt="Placeholder image">
         </a>
         <div class="media-body">
             <h4>Media heading</h4>
@@ -45,7 +45,7 @@ Holder.addTheme("gray", {
         </div>
     </div>
 
-    <hr />
+    <hr>
 
     <div class="media">
         <div class="media-body">
@@ -53,14 +53,14 @@ Holder.addTheme("gray", {
             <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
         </div>
         <a href="#" class="d-flex ms-1">
-            <img data-src="holder.js/64x64" alt="Placeholder image" />
+            <img data-src="holder.js/64x64" alt="Placeholder image">
         </a>
     </div>
 
-    <hr />
+    <hr>
 
     <div class="media">
-        <img data-src="holder.js/64x64" class="d-flex me-1" alt="Placeholder image" />
+        <img data-src="holder.js/64x64" class="d-flex me-1" alt="Placeholder image">
         <div class="media-body">
             <h4>Media heading</h4>
             <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
@@ -69,20 +69,20 @@ Holder.addTheme("gray", {
     </div>
 
 
-    <hr />
+    <hr>
 
     <h2>Nested media</h2>
 
     <div class="media">
         <a href="#" class="d-flex me-1">
-            <img data-src="holder.js/64x64" alt="Placeholder image" />
+            <img data-src="holder.js/64x64" alt="Placeholder image">
         </a>
         <div class="media-body">
             <h4>Media heading</h4>
             <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
             <div class="media">
                 <a href="#" class="d-flex me-1">
-                    <img data-src="holder.js/64x64" alt="Placeholder image" />
+                    <img data-src="holder.js/64x64" alt="Placeholder image">
                 </a>
                 <div class="media-body">
                     <h4>Nested media heading</h4>
@@ -92,13 +92,13 @@ Holder.addTheme("gray", {
         </div>
     </div>
 
-    <hr />
+    <hr>
 
     <h2>Media alignment</h2>
 
     <div class="media">
         <a href="#" class="d-flex me-1">
-            <img data-src="holder.js/64x64" alt="Placeholder image" />
+            <img data-src="holder.js/64x64" alt="Placeholder image">
         </a>
         <div class="media-body">
             <h4>Top aligned media</h4>
@@ -109,7 +109,7 @@ Holder.addTheme("gray", {
 
     <div class="media">
         <a href="#" class="d-flex flex-self-center me-1">
-            <img data-src="holder.js/64x64" alt="Placeholder image" />
+            <img data-src="holder.js/64x64" alt="Placeholder image">
         </a>
         <div class="media-body">
             <h4>Middle aligned media</h4>
@@ -120,7 +120,7 @@ Holder.addTheme("gray", {
 
     <div class="media">
         <a href="#" class="d-flex flex-self-end me-1">
-            <img data-src="holder.js/64x64" alt="Placeholder image" />
+            <img data-src="holder.js/64x64" alt="Placeholder image">
         </a>
         <div class="media-body">
             <h4>Bottom aligned media</h4>
@@ -129,14 +129,14 @@ Holder.addTheme("gray", {
         </div>
     </div>
 
-    <hr />
+    <hr>
 
     <h2>Media list</h2>
 
     <ul class="list-unstyled">
         <li class="media">
             <a href="#" class="d-flex me-1">
-                <img data-src="holder.js/64x64" alt="Placeholder image" />
+                <img data-src="holder.js/64x64" alt="Placeholder image">
             </a>
             <div class="media-body">
                 <h4>Media heading</h4>
@@ -144,7 +144,7 @@ Holder.addTheme("gray", {
                 <!-- Nested media object -->
                 <div class="media">
                     <a href="#" class="d-flex me-1">
-                        <img data-src="holder.js/64x64" alt="Placeholder image" />
+                        <img data-src="holder.js/64x64" alt="Placeholder image">
                     </a>
                     <div class="media-body">
                         <h4>Nested media heading</h4>
@@ -152,7 +152,7 @@ Holder.addTheme("gray", {
                         <!-- Nested media object -->
                         <div class="media">
                             <a href="#" class="d-flex me-1">
-                                <img data-src="holder.js/64x64" alt="Placeholder image" />
+                                <img data-src="holder.js/64x64" alt="Placeholder image">
                             </a>
                             <div class="media-body">
                                 <h4>Nested media heading</h4>
@@ -164,7 +164,7 @@ Holder.addTheme("gray", {
                 <!-- Nested media object -->
                 <div class="media">
                     <a href="#" class="d-flex me-1">
-                        <img data-src="holder.js/64x64" alt="Placeholder image" />
+                        <img data-src="holder.js/64x64" alt="Placeholder image">
                     </a>
                     <div class="media-body">
                         <h4>Nested media heading</h4>
@@ -179,7 +179,7 @@ Holder.addTheme("gray", {
                 <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
             </div>
             <a href="#" class="d-flex ms-1">
-                <img data-src="holder.js/64x64" alt="Placeholder image" />
+                <img data-src="holder.js/64x64" alt="Placeholder image">
             </a>
         </li>
     </ul>
