--- a/test/visual/equalize.html
+++ b/test/visual/equalize.html
@@ -6,7 +6,7 @@
 
 <title>Figuration - Equalize</title>
 
-<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
+<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css">
 
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
@@ -40,20 +40,20 @@
     <div class="row" id="eq0" data-cfw="equalize" data-cfw-equalize-target=".card">
         <div class="col-lg-4">
             <div class="card card-block">
-                One<br />
+                One<br>
             </div>
         </div>
         <div class="col-lg-4">
             <div class="card card-block">
-                Two<br />
-                Two<br />
+                Two<br>
+                Two<br>
             </div>
         </div>
         <div class="col-lg-4">
             <div class="card card-block">
-                Three<br />
-                Three<br />
-                Three<br />
+                Three<br>
+                Three<br>
+                Three<br>
             </div>
         </div>
     </div>
@@ -63,20 +63,20 @@
     <div class="row" id="eq1" data-cfw="equalize" data-cfw-equalize-target=".card"  data-cfw-equalize-row="false" data-cfw-equalize-stack="true">
         <div class="col-lg-4">
             <div class="card card-block">
-                One<br />
+                One<br>
             </div>
         </div>
         <div class="col-lg-4">
             <div class="card card-block">
-                Two<br />
-                Two<br />
+                Two<br>
+                Two<br>
             </div>
         </div>
         <div class="col-lg-4">
             <div class="card card-block">
-                Three<br />
-                Three<br />
-                Three<br />
+                Three<br>
+                Three<br>
+                Three<br>
             </div>
         </div>
     </div>
@@ -87,16 +87,16 @@
     <div class="row" id="eq2" data-cfw="equalize" data-cfw-equalize-target=".card">
         <div class="col">
             <div class="card card-block">
-                One<br />
+                One<br>
             </div>
             <div class="card card-block">
-                Two<br />
-                Two<br />
+                Two<br>
+                Two<br>
             </div>
             <div class="card card-block">
-                Three<br />
-                Three<br />
-                Three<br />
+                Three<br>
+                Three<br>
+                Three<br>
             </div>
         </div>
     </div>
@@ -107,23 +107,23 @@
     <div class="row" id="eq3" data-cfw="equalize" data-cfw-equalize-target=".card" data-cfw-equalize-stack="true">
         <div class="col">
             <div class="card card-block">
-                One<br />
+                One<br>
             </div>
             <div class="card card-block">
-                Two<br />
-                Two<br />
+                Two<br>
+                Two<br>
             </div>
             <div class="card card-block">
-                Three<br />
-                Three<br />
-                Three<br />
+                Three<br>
+                Three<br>
+                Three<br>
             </div>
         </div>
     </div>
 
 </div>
 
-<hr />
+<hr>
 
 <div class="container">
     <div id="eqXRow0" data-cfw="equalize" data-cfw-equalize-target=".row2">
@@ -132,44 +132,44 @@
         <div class="row">
             <div class="col">
                 <div class="row0 card card-block">
-                    One<br />
+                    One<br>
                 </div>
                 <div class="row1 card card-block">
-                    One<br />
+                    One<br>
                 </div>
                 <div class="row2 card card-block">
-                    One<br />
+                    One<br>
                 </div>
             </div>
             <div class="col">
                 <div class="row0 card card-block">
-                    Two<br />
-                    Two<br />
+                    Two<br>
+                    Two<br>
                 </div>
                 <div class="row1 card card-block">
-                    Two<br />
-                    Two<br />
+                    Two<br>
+                    Two<br>
                 </div>
                 <div class="row2 card card-block">
-                    Two<br />
-                    Two<br />
+                    Two<br>
+                    Two<br>
                 </div>
             </div>
             <div class="col">
                 <div class="row0 card card-block">
-                    Three<br />
-                    Three<br />
-                    Three<br />
+                    Three<br>
+                    Three<br>
+                    Three<br>
                 </div>
                 <div class="row1 card card-block">
-                    Three<br />
-                    Three<br />
-                    Three<br />
+                    Three<br>
+                    Three<br>
+                    Three<br>
                 </div>
                 <div class="row2 card card-block">
-                    Three<br />
-                    Three<br />
-                    Three<br />
+                    Three<br>
+                    Three<br>
+                    Three<br>
                 </div>
             </div>
         </div>
@@ -177,7 +177,7 @@
     </div>
     </div>
 
-    <hr />
+    <hr>
 
     <p>
         <button type="button" class="btn" data-cfw="modal" data-cfw-modal-target="#modal0">Modal - Nested Equalize</button>
@@ -190,53 +190,53 @@
                     <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
-                    <img data-cfw-lazy-src="../../site/assets/4.0/img/test.gif" alt="test pattern" class="img-fluid" data-cfw="lazy" data-cfw-lazy-speed=1000 />
+                    <img data-cfw-lazy-src="../../site/assets/4.0/img/test.gif" alt="test pattern" class="img-fluid" data-cfw="lazy" data-cfw-lazy-delay="1000">
     <div data-cfw="equalize" id="modalRow2" data-cfw-equalize-target=".row2">
     <div data-cfw="equalize" id="modalRow1" data-cfw-equalize-target=".row1">
     <div data-cfw="equalize" id="modalRow0" data-cfw-equalize-target=".row0">
         <div class="row">
             <div class="col">
                 <div class="row0 card card-block">
-                    One<br />
-                    <img data-cfw-lazy-src="../../site/assets/4.0/img/test.gif" alt="test pattern" class="img-fluid" data-cfw="lazy" data-cfw-lazy-speed=1000 />
+                    One<br>
+                    <img data-cfw-lazy-src="../../site/assets/4.0/img/test.gif" alt="test pattern" class="img-fluid" data-cfw="lazy" data-cfw-lazy-delay="1000">
                 </div>
                 <div class="row1 card card-block">
-                    One<br />
+                    One<br>
                 </div>
                 <div class="row2 card card-block">
-                    One<br />
+                    One<br>
                 </div>
             </div>
             <div class="col">
                 <div class="row0 card card-block">
-                    Two<br />
-                    Two<br />
+                    Two<br>
+                    Two<br>
                 </div>
                 <div class="row1 card card-block">
-                    Two<br />
-                    Two<br />
+                    Two<br>
+                    Two<br>
                 </div>
                 <div class="row2 card card-block">
-                    Two<br />
-                    Two<br />
+                    Two<br>
+                    Two<br>
                 </div>
             </div>
             <div class="col">
                 <div class="row0 card card-block">
-                    Three<br />
-                    Three<br />
-                    Three<br />
+                    Three<br>
+                    Three<br>
+                    Three<br>
                 </div>
                 <div class="row1 card card-block">
-                    Three<br />
-                    Three<br />
-                    Three<br />
+                    Three<br>
+                    Three<br>
+                    Three<br>
                 </div>
                 <div class="row2 card card-block">
-                    Three<br />
-                    Three<br />
-                    Three<br />
-                    <img data-cfw-lazy-src="../../site/assets/4.0/img/test.gif" alt="test pattern" class="img-fluid" data-cfw="lazy" data-cfw-lazy-speed=1000 />
+                    Three<br>
+                    Three<br>
+                    Three<br>
+                    <img data-cfw-lazy-src="../../site/assets/4.0/img/test.gif" alt="test pattern" class="img-fluid" data-cfw="lazy" data-cfw-lazy-delay="1000">
                 </div>
             </div>
         </div>
