--- a/test/visual/grid.html
+++ b/test/visual/grid.html
@@ -6,7 +6,7 @@
 
 <title>Figuration - Grid</title>
 
-<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
+<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css">
 
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
@@ -114,7 +114,7 @@
     <h2>Full width, single column</h2>
     <p class="text-info">No grid classes are necessary for full-width elements.</p>
 
-    <hr />
+    <hr>
 
     <h2>Two columns with two nested columns</h2>
     <p>Per the documentation, nesting is easy&mdash;just put a row of columns within an existing column. This gives you two columns <strong>starting at desktops and scaling to extra large desktops</strong>, with another two (equal widths) within the larger column.</p>
@@ -130,7 +130,7 @@
         <div class="col-md-4">.col-md-4</div>
     </div>
 
-    <hr />
+    <hr>
 
     <h2>Mixed: mobile and desktop</h2>
     <p>The grid system has five tiers of classes: xs (extra small), sm (small), md (medium), lg (large), and xl (extra large). You can use nearly any combination of these classes to create more dynamic and flexible layouts.</p>
@@ -151,7 +151,7 @@
         <div class="col-6">.col-6</div>
     </div>
 
-    <hr />
+    <hr>
 
     <h2>Mixed: mobile, tablet, and desktop</h2>
     <div class="row">
@@ -165,14 +165,14 @@
         <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
     </div>
 
-    <hr />
+    <hr>
 
     <h2>Column clearing</h2>
     <p>Use <a href="../layout/grid/#example-responsive-column-resets">responsive column resets</a> at specific breakpoints to prevent awkward wrapping with uneven content.</p>
     <div class="row">
         <div class="col-4 col-sm-3">
             .col-4 .col-sm-3
-            <br />
+            <br>
             Resize your viewport or check it out on your phone for an example.
         </div>
         <div class="col-4 col-sm-3">.col-4 .col-sm-3</div>
@@ -184,7 +184,7 @@
         <div class="col-8 col-sm-3">.col-8 .col-sm-3</div>
     </div>
 
-    <hr />
+    <hr>
 
     <h2>Offset resets</h2>
     <p>Reset offsets at specific breakpoints.</p>
@@ -198,7 +198,7 @@
         <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">.col-sm-6 .col-md-5 .offset-md-2 .col-lg-6 .offset-lg-0</div>
     </div>
 
-    <hr />
+    <hr>
 
     <h2>Auto layout columns</h2>
 
@@ -246,7 +246,7 @@
         </div>
     </div>
 
-    <hr />
+    <hr>
 
     <h2>Vertical Flex Alignment</h2>
 
