--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1151,7 +1151,7 @@ $(window).ready(function() {
                     <li class="nav-item"><a href="#tabpanel2" class="nav-link active" data-cfw="tab">Tab 2</a></li>
                     <li class="nav-item"><a href="#tabpanel3" class="nav-link" data-cfw="tab">Tab 3</a></li>
                     <li class="nav-item"><a href="#tabpanel4" class="nav-link disabled" data-cfw="tab">Tab 4</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link" data-cfw="tab" data-cfw-tab-target="#tabpanel5">Tab 5</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link" data-cfw="tab" data-cfw-tab-target="#tabpanel5" data-cfw-tab-animate="false">Tab 5</a></li>
                 </ul>
                 <div class="tab-content">
                     <div class="tab-pane" id="tabpanel1">
@@ -1162,6 +1162,7 @@ $(window).ready(function() {
                         <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.</p>
                     </div>
                     <div class="tab-pane" id="tabpanel3">
+                        <div class="active bg-warning">active</div>
                         <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork. Williamsburg banh mi whatever gluten-free, carles pitchfork biodiesel fixie etsy retro mlkshk vice blog. Scenester cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray yr.</p>
                         <div class="row" data-cfw="equalize" data-cfw-equalize-target=".card">
                             <div class="col-4">
